[metadata]
name = buzzoff
version = attr: buzzoff.__version__
author = Eddie Darling
author_email = darling@berkeley.edu
maintainer = Eddie Darling
maintainer_email = darling@berkeley.edu
description = This project creates a list of possible words that can be created from a set of letters.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: POSIX :: Linux

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    buzzoff = buzzoff.__main__:main
